--- a/Projekat/naslovna.tex
+++ b/Projekat/naslovna.tex
@@ -39,8 +39,9 @@ Tatjana Radovanovi\'c 1103/2018
 Informacioni sistemu\\% Supervisor's Name
 \emph{Profesot:} \\
 Sa\v sa Malkov\\
-\emph{Asistent:} \\
+\emph{Asistenti:} \\
 Aleksandra Koci\'c\\
+Ognjen Koci\'c\\
 \end{flushright}
 \end{minipage}\\[4cm]
 
