dodat veb interfejs

--- a/Projekat/projekat.tex
+++ b/Projekat/projekat.tex
@@ -70,7 +70,31 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
 		\item[4a. ] Ukoliko podaci sa forme za rezervaciju karte nisu korektni sistem odgovaraju\'com porukom obave\v stava kupca i stranica na kojoj se nalazi forma se osve\v zava
 	\end{enumerate}
 	
+\begin{figure}[h!tb] 
+	\centering
+	\includegraphics[width=1.2\linewidth]{../Slike/Veb/pocetna.png}
+	\caption{Po\v cetna stranica}
+	\label{fig:pocetna}
+\end{figure}
+\clearpage
+\begin{figure}[h!tb] 
+	\centering
+	\includegraphics[width=1.2\linewidth]{../Slike/Veb/autobusi.png}
+	\caption{Rezultati pretrage}
+	\label{fig:pretraga}
+\end{figure}
+
+\begin{figure}[h!tb] 
+	\centering
+	\includegraphics[width=1.2\linewidth]{../Slike/Veb/rezervacija.png}
+	\caption{Popunjavanje formulara za rezervaciju karte/mesta}
+	\label{fig:pocetna}
+\end{figure}
+
+
 \end{description}
+
+
 \newpage
 \subsubsection{Online rezervacija mesta}
 \begin{description}
@@ -92,6 +116,13 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
 	\begin{enumerate}
 	\item[4a. ] Ukoliko podaci sa forme za rezervaciju karte nisu korektni sistem odgovaraju\' com porukom obave\v stava kupca i stranica na kojoj se nalazi forma se osve\v zava
 	\end{enumerate}
+\begin{figure}[h!tb] 
+	\centering
+	\includegraphics[width=1.2\linewidth]{../Slike/Veb/rezervacijapopup.png}
+	\caption{Popunjavanje formulara za rezervaciju karte/mesta}
+	\label{fig:pocetna}
+\end{figure}
+
 \end{description}
 \newpage
 \subsubsection{Rezervacija mesta/karte telefonom}
@@ -115,13 +146,29 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
 	\begin{enumerate}
 		\item[6a. ] Ukoliko podaci sa forme za rezervaciju karte nisu korektni sistem odgovaraju\' com porukom obave\v stava kupca i stranica na kojoj se nalazi forma se osve\v zava.
 	\end{enumerate}
+	
+
 \end{description}
-\begin{figure}
-	\centering
+\begin {figure} [h!tb]
+  \centering
+  \includegraphics[width=1.2\linewidth]{../Slike/Veb/autobusi_sluzbenik.png}
+  \caption {Slu\v zbenik - autobusi}
+  \label {fig:sluzbenikautobusi}
+\end {figure}
+\clearpage
+\begin{figure} [h!tb]
+  \centering
+  \includegraphics[width=1.2\linewidth]{../Slike/Veb/rezervacije.png}
+	\caption{Slu\v zbenik - rezervacije}
+	
+  \label{fig:sluzbenikrezervacije}
+	\vspace*{\floatsep}
+	
 	\includegraphics[width=1.1\linewidth]{../Slike/rezervacijaTelefonom}
 	\caption{Dijagram aktivnosti - rezervacija telefonom}
 	\label{fig:rezervacijatelefonom}
 \end{figure}	
+
 \newpage
 \subsection{Kupovina karte/mesta}
 \subsubsection{Kupovina ako karta nije unapred rezervisana}
@@ -235,7 +282,7 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
   \begin{enumerate}
     \item[3a. ]  Ukoliko uslovi nisu ispunjeni, slu\v zbenik obave\v stava kupca.
   \end{enumerate}
-  
+
 \end{description}
 
 \subsubsection{Poni\v stavanje rezervacije karte/mesta - telefonom}
@@ -284,7 +331,13 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
     \item[5a. ]  Ukoliko su kod ili rezervacija neva\v ze\'ci, sistem izbacuje poruku greske kojom obave\v stava kupca o neregularnosti. 
 
   \end{enumerate}
-  
+\clearpage  
+\begin{figure}[h!tb] 
+	\centering
+	\includegraphics[width=1.2\linewidth]{../Slike/Veb/reklamacija.png}
+	\caption{Poni\v stavanje rezervacije}
+\label{fig:reklamacija}
+\end{figure}
 \end{description}
 
 \subsection{Alokacija dodatnih resursa}
