--- a/Projekat/projekat.tex
+++ b/Projekat/projekat.tex
@@ -88,7 +88,7 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
 	\centering
 	\includegraphics[width=1.2\linewidth]{../Slike/Veb/rezervacija.png}
 	\caption{Popunjavanje formulara za rezervaciju karte/mesta}
-	\label{fig:pocetna}
+	\label{fig:rezervacijaformular}
 \end{figure}
 
 
@@ -120,7 +120,7 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
 	\centering
 	\includegraphics[width=1.2\linewidth]{../Slike/Veb/rezervacijapopup.png}
 	\caption{Popunjavanje formulara za rezervaciju karte/mesta}
-	\label{fig:pocetna}
+	\label{fig:rezpopup}
 \end{figure}
 
 \end{description}
@@ -155,14 +155,8 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
   \caption {Slu\v zbenik - autobusi}
   \label {fig:sluzbenikautobusi}
 \end {figure}
-\clearpage
 \begin{figure} [h!tb]
-  \centering
-  \includegraphics[width=1.2\linewidth]{../Slike/Veb/rezervacije.png}
-	\caption{Slu\v zbenik - rezervacije}
-	
-  \label{fig:sluzbenikrezervacije}
-	\vspace*{\floatsep}
+  
 	
 	\includegraphics[width=1.1\linewidth]{../Slike/rezervacijaTelefonom}
 	\caption{Dijagram aktivnosti - rezervacija telefonom}
@@ -194,9 +188,14 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
 		\item Slu\v zbenik uzima novac i daje kartu kupcu tako da se kupovina smatra uspe\v snom.
 	\end{enumerate}
 \end{description}
-
-\begin{figure}[!htb] 
+\clearpage
+\begin{figure}[h!tb] 
 	\centering
+	\includegraphics[width=1.2\linewidth]{../Slike/Veb/rezervacija_sluzbenik.png}
+	\caption{Interfejs iz ugla slu\v zbenika}
+	\label {fig:rezervacijasluzbenik}
+\end{figure}
+\begin{figure}[h!tb] 
 	\includegraphics[width=1.2\linewidth]{"../Slike/kupovina"}
 	\caption{Dijagram aktivnosti - kupovina nerezervisane karte}
 	\label{fig:kupovina}
@@ -243,6 +242,13 @@ Osnovna namena na\v seg informacionog sistema je da na \v sto efikasniji na\v ci
 		\item Kupac pla\'ca kartu.
 		\item Slu\v zbenik uzima novac i daje kartu.
 	\end{enumerate}
+	
+\begin{figure}[!htb] 
+	\centering
+	\includegraphics[width=1.2\linewidth]{../Slike/Veb/rezervacije_sluzbenik.png}
+	\caption{Potvrda rezervacije}
+	\label{fig:potvrda_karte}
+\end{figure}
 \end{description}
 
 \subsubsection{Kupovina unapred rezervisanog mesta}
